# railway-barcode-api

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
app/: barcode_gen.py  main.py  schemas.py
tests/: test_barcode.py
