[project]
name = "railway-barcode-api"
version = "1.0.0"
description = "A barcode generation API — SVG/PNG barcodes and QR codes in one endpoint"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-barcode>=0.15.1",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
